[package]
name = "agenix"
version = "0.1.1"
authors = ["Cole Helbling <cole.e.helbling@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cole-h/agenix-cli"

[dependencies]
age = { version = "0.6.0", default-features = false, features = [ "cli-common", "ssh", "armor" ] }
clap = { version = "4.5.23", default-features = false, features = [ "std", "cargo", "derive" ] }
color-eyre = { version = "0.5.10", default-features = false, features = [ "track-caller" ] }
env_logger = { version = "0.8.2", default-features = false, features = [ "termcolor", "atty" ] }
glob = "0.3.0"
log = "0.4.14"
serde = "1.0.123"
tempfile = "3.2.0"
toml = "0.5.8"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
debug = 1
